<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.krishnarao.thambola_game.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/welcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tickets"
        android:onClick="goToTickets"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@id/textView"
        android:background="@color/colorWhite"/>

    <Button
        android:text="@string/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickForOptions"
        android:id="@+id/button3"
        android:layout_below="@+id/button"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:background="@color/colorWhite"/>

    <TextView
        android:text="@string/textContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_below="@+id/imageButton"
        android:layout_centerHorizontal="true"
        android:textSize="12sp"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/download"
        android:onClick="onClicforUri"
        android:background="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/imageButton"
        android:layout_alignStart="@+id/imageButton" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/namaste1"
        android:layout_gravity="center_horizontal"
        android:visibility="visible"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView" />

</RelativeLayout>
